# informatics_laboratories_7

./: README.md  pyproject.toml  requirements.txt
appendix/: report.docx
application/: __main__.py
