[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Name Surname <email@domain.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
application = "application.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
